--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -122,4 +122,93 @@
 			</plugin>
 		</plugins>
 	</reporting>
+
+	<profiles>
+		<profile>
+			<id>jetty</id>
+			<properties>
+				<logback.version>1.2.12</logback.version>
+				<openwebbeans.version>2.0.27</openwebbeans.version>
+			</properties>
+			<build>
+				<plugins>
+					<plugin>
+						<groupId>org.eclipse.jetty</groupId>
+						<artifactId>jetty-maven-plugin</artifactId>
+						<version>9.4.51.v20230217</version>
+						<configuration>
+							<stopKey>stopKey</stopKey>
+							<stopPort>9999</stopPort>
+							<systemProperties>
+								<systemProperty>
+									<name>derby.stream.error.file</name>
+									<value>target/derby.log</value>
+								</systemProperty>
+							</systemProperties>
+							<webAppConfig>
+								<overrideDescriptor>src/main/jetty/override-web.xml</overrideDescriptor>
+							</webAppConfig>
+						</configuration>
+					</plugin>
+				</plugins>
+			</build>
+			<dependencies>
+				<dependency>
+					<groupId>org.apache.myfaces.core</groupId>
+					<artifactId>myfaces-api</artifactId>
+					<version>${myfaces.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.myfaces.core</groupId>
+					<artifactId>myfaces-impl</artifactId>
+					<version>${myfaces.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.openwebbeans</groupId>
+					<artifactId>openwebbeans-impl</artifactId>
+					<version>${openwebbeans.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.openwebbeans</groupId>
+					<artifactId>openwebbeans-spi</artifactId>
+					<version>${openwebbeans.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.openwebbeans</groupId>
+					<artifactId>openwebbeans-el22</artifactId>
+					<version>${openwebbeans.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.openwebbeans</groupId>
+					<artifactId>openwebbeans-web</artifactId>
+					<version>${openwebbeans.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.geronimo.specs</groupId>
+					<artifactId>geronimo-jcdi_2.0_spec</artifactId>
+					<version>1.3</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.geronimo.specs</groupId>
+					<artifactId>geronimo-atinject_1.0_spec</artifactId>
+					<version>1.2</version>
+				</dependency>
+				<dependency>
+					<groupId>org.apache.geronimo.specs</groupId>
+					<artifactId>geronimo-interceptor_1.2_spec</artifactId>
+					<version>1.2</version>
+				</dependency>
+				<dependency>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-classic</artifactId>
+					<version>${logback.version}</version>
+				</dependency>
+				<dependency>
+					<groupId>ch.qos.logback</groupId>
+					<artifactId>logback-core</artifactId>
+					<version>${logback.version}</version>
+				</dependency>
+			</dependencies>
+		</profile>
+	</profiles>
 </project>
