--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -15,6 +15,7 @@
 	</parent>
 
 	<properties>
+		<jakarta.faces.version>2.3.18</jakarta.faces.version>
 		<tobago.version>4.6.0</tobago.version>
 		<myfaces.version>2.3.10</myfaces.version>
 	</properties>
@@ -41,18 +42,6 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.myfaces.core</groupId>
-			<artifactId>myfaces-api</artifactId>
-			<version>${myfaces.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.myfaces.core</groupId>
-			<artifactId>myfaces-impl</artifactId>
-			<version>${myfaces.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
 			<!-- This resolves
 				javax.inject.Inject
 				javax.inject.Named
@@ -60,6 +49,12 @@
 			<groupId>org.apache.servicemix.bundles</groupId>
 			<artifactId>org.apache.servicemix.bundles.javax-inject</artifactId>
 			<version>1_3</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>jakarta.faces</artifactId>
+			<version>${jakarta.faces.version}</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
@@ -113,9 +108,9 @@
 							<version>1</version>
 						</additionalDependency>
 						<additionalDependency>
-							<groupId>org.apache.myfaces.core</groupId>
-							<artifactId>myfaces-bundle</artifactId>
-							<version>${myfaces.version}</version>
+							<groupId>org.glassfish</groupId>
+							<artifactId>jakarta.faces</artifactId>
+							<version>${jakarta.faces.version}</version>
 						</additionalDependency>
 					</additionalDependencies>
 				</configuration>
