--- a/pstExtractor/pom.xml
+++ b/pstExtractor/pom.xml
@@ -18,6 +18,7 @@
 		<jakarta.faces.version>2.3.18</jakarta.faces.version>
 		<myfaces.version>2.3.10</myfaces.version>
 		<tobago.version>4.6.0</tobago.version>
+		<jetty.version>9.4.51.v20230217</jetty.version>
 	</properties>
 
 	<dependencies>
@@ -84,7 +85,7 @@
 			<plugin>
 				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
-				<version>9.4.51.v20230217</version>
+				<version>${jetty.version}</version>
 				<configuration>
 					<stopKey>stopKey</stopKey>
 					<stopPort>9999</stopPort>
